--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ java {
 	}
 }
 
-configurations {
+configurations {a
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
@@ -31,6 +31,33 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// queryDSL
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+}
+
+sourceSets {
+	main {
+		java {
+			srcDirs += 'src/main/generated'
+		}
+	}
+}
+
+// Querydsl 설정부
+def generated = 'src/main/generated'
+
+// querydsl QClass 파일 생성 위치를 지정
+tasks.withType(JavaCompile) {
+	options.generatedSourceOutputDirectory = file(generated)
+}
+
+// gradle clean 시에 QClass 디렉토리 삭제
+clean {
+	delete file('src/main/generated')
 }
 
 tasks.named('test') {
