feat #14: 10주차 실습 2 - jwt 방식

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,8 @@ spring:
     web:
       pageable:
         one-indexed-parameters: true
+  jwt:
+    token:
+      secretKey: umceightfightingjwttokenauthentication
+      expiration:
+        access: 14400000
