--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -55,7 +55,7 @@ jobs:
           EC2_HOST: ${{ secrets.EC2_HOST }}
         run: |
           echo "$EC2_SSH_KEY" > key-bbungya.pem
-          chmod 600 private_key.pem
+          chmod 600 key-bbungya.pem
           jar_file=$(find build/libs -name '*.jar' ! -name '*plain.jar' | head -n 1)
           scp -i private_key.pem -o StrictHostKeyChecking=no "$jar_file" $EC2_USERNAME@$EC2_HOST:/home/$EC2_USERNAME/umc8thServer.jar
           ssh -i private_key.pem -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_HOST "
@@ -63,4 +63,4 @@ jobs:
             sleep 10
             nohup java -jar /home/$EC2_USERNAME/umc8thServer.jar > app.log 2>&1 &  # 새 버전 애플리케이션 실행
           "
-          rm -f private_key.pem  # 민감한 정보 삭제
+          rm -f key-bbungya.pem  # 민감한 정보 삭제
