fix #17: 키 이름 수정

--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -57,8 +57,8 @@ jobs:
           echo "$EC2_SSH_KEY" > key-bbungya.pem
           chmod 600 key-bbungya.pem
           jar_file=$(find build/libs -name '*.jar' ! -name '*plain.jar' | head -n 1)
-          scp -i private_key.pem -o StrictHostKeyChecking=no "$jar_file" $EC2_USERNAME@$EC2_HOST:/home/$EC2_USERNAME/umc8thServer.jar
-          ssh -i private_key.pem -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_HOST "
+          scp -i key-bbungya.pem -o StrictHostKeyChecking=no "$jar_file" $EC2_USERNAME@$EC2_HOST:/home/$EC2_USERNAME/umc8thServer.jar
+          ssh -i key-bbungya.pem -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_HOST "
             pgrep java | xargs -r kill -15  # 기존에 실행 중인 Java 프로세스 종료
             sleep 10
             nohup java -jar /home/$EC2_USERNAME/umc8thServer.jar > app.log 2>&1 &  # 새 버전 애플리케이션 실행
