--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -1,66 +1,133 @@
+#name: UMC Dev CI/CD
+#
+#on:
+#  push:
+#    branches: [ develop ]  # develop 브랜치에 push가 일어날 때 실행
+#
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - uses: actions/checkout@v3  # 저장소 코드 체크아웃
+#
+#      - name: Set up JDK 17  # Java 개발 킷 설정
+#        uses: actions/setup-java@v3
+#        with:
+#          distribution: 'temurin'
+#          java-version: '17'
+#
+#      - name: Make application.yml  # application.yml 파일 생성
+#        run: |
+#          cd ./src/main/resources
+#          echo "${{ secrets.APPLICATION_YML }}" > ./application.yml
+#        shell: bash
+#
+#      - name: Grant execute permission for gradlew  # gradlew 실행 권한 부여
+#        run: chmod +x gradlew
+#
+#      - name: Build with Gradle  # Gradle을 사용하여 프로젝트 빌드
+#        uses: gradle/gradle-build-action@v2
+#        with:
+#          arguments: build
+#
+#      - name: Upload build artifact  # 빌드된 아티팩트 업로드
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: umc8thServer
+#          path: build/libs/*.jar
+#
+#  deploy:
+#    needs: build  # build 작업이 성공적으로 완료된 후 실행
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Download build artifact  # 이전 단계에서 업로드한 아티팩트 다운로드
+#        uses: actions/download-artifact@v4
+#        with:
+#          name: umc8thServer
+#          path: build/libs/
+#
+#      - name: Deploy to EC2  # EC2에 배포
+#        env:
+#          EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
+#          EC2_USERNAME: ${{ secrets.EC2_USERNAME }}
+#          EC2_HOST: ${{ secrets.EC2_HOST }}
+#        run: |
+#          echo "$EC2_SSH_KEY" > key-bbungya.pem
+#          chmod 600 key-bbungya.pem
+#          jar_file=$(find build/libs -name '*.jar' ! -name '*plain.jar' | head -n 1)
+#          scp -i key-bbungya.pem -o StrictHostKeyChecking=no "$jar_file" $EC2_USERNAME@$EC2_HOST:/home/$EC2_USERNAME/umc8thServer.jar
+#          ssh -i key-bbungya.pem -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_HOST "
+#            pgrep java | xargs -r kill -15  # 기존에 실행 중인 Java 프로세스 종료
+#            sleep 10
+#            nohup java -jar /home/$EC2_USERNAME/umc8thServer.jar > app.log 2>&1 &  # 새 버전 애플리케이션 실행
+#          "
+#          rm -f key-bbungya.pem  # 민감한 정보 삭제
 name: UMC Dev CI/CD
 
 on:
-  push:
-    branches: [ develop ]  # develop 브랜치에 push가 일어날 때 실행
+  pull_request:
+    types: [closed]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'develop'
 
     steps:
-      - uses: actions/checkout@v3  # 저장소 코드 체크아웃
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: Set up JDK 17  # Java 개발 킷 설정
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Make application.yml  # application.yml 파일 생성
+      - name: Make application.yml
         run: |
           cd ./src/main/resources
-          echo "${{ secrets.APPLICATION_YML }}" > ./application.yml
+          echo "${{ secrets.APPLICATION_YML }}" > application.yml
         shell: bash
 
-      - name: Grant execute permission for gradlew  # gradlew 실행 권한 부여
-        run: chmod +x gradlew
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+        shell: bash
 
-      - name: Build with Gradle  # Gradle을 사용하여 프로젝트 빌드
-        uses: gradle/gradle-build-action@v2
+      - name: Build with Gradle
+        run: ./gradlew clean build -x test
+        shell: bash
+
+      - name: Get current time
+        uses: 1466587594/get-current-time@v2
+        id: current-time
         with:
-          arguments: build
+          format: YYYY-MM-DDTHH-mm-ss
+          utcOffset: "+09:00"
 
-      - name: Upload build artifact  # 빌드된 아티팩트 업로드
-        uses: actions/upload-artifact@v4
-        with:
-          name: umc8thServer
-          path: build/libs/*.jar
+      - name: Show Current Time
+        run: echo "CurrentTime=${{ steps.current-time.outputs.formattedTime }}"
+        shell: bash
 
-  deploy:
-    needs: build  # build 작업이 성공적으로 완료된 후 실행
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Download build artifact  # 이전 단계에서 업로드한 아티팩트 다운로드
-        uses: actions/download-artifact@v4
-        with:
-          name: umc8thServer
-          path: build/libs/
-
-      - name: Deploy to EC2  # EC2에 배포
-        env:
-          EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
-          EC2_USERNAME: ${{ secrets.EC2_USERNAME }}
-          EC2_HOST: ${{ secrets.EC2_HOST }}
+      - name: Generate deployment package
         run: |
-          echo "$EC2_SSH_KEY" > key-bbungya.pem
-          chmod 600 key-bbungya.pem
-          jar_file=$(find build/libs -name '*.jar' ! -name '*plain.jar' | head -n 1)
-          scp -i key-bbungya.pem -o StrictHostKeyChecking=no "$jar_file" $EC2_USERNAME@$EC2_HOST:/home/$EC2_USERNAME/umc8thServer.jar
-          ssh -i key-bbungya.pem -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_HOST "
-            pgrep java | xargs -r kill -15  # 기존에 실행 중인 Java 프로세스 종료
-            sleep 10
-            nohup java -jar /home/$EC2_USERNAME/umc8thServer.jar > app.log 2>&1 &  # 새 버전 애플리케이션 실행
-          "
-          rm -f key-bbungya.pem  # 민감한 정보 삭제
+          mkdir -p deploy
+          cp build/libs/*.jar deploy/application.jar
+          cp Procfile deploy/Procfile
+          cp -r .ebextensions-dev deploy/.ebextensions
+          cp -r .platform deploy/.platform
+          cd deploy && zip -r deploy.zip .
+
+      - name: Deploy to Elastic Beanstalk
+        uses: einaregilsson/beanstalk-deploy@v20
+        with:
+          aws_access_key: ${{ secrets.AWS_ACTION_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_ACTION_SECRET_ACCESS_KEY }}
+          application_name: breifing-dev  # 반드시 EB 콘솔 이름 확인
+          environment_name: Breifing-dev-env
+          version_label: github-action-${{ steps.current-time.outputs.formattedTime }}
+          region: ap-northeast-1
+          deployment_package: deploy/deploy.zip
+          wait_for_deployment: false
